<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/stadium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/stadium"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date_time"
            android:imeOptions="actionSend"
            android:inputType="datetime"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <EditText
                android:id="@+id/teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:hint="@string/team_a"
                android:imeOptions="actionSend"
                android:inputType="text|textCapSentences"

                android:padding="4dp"
                android:textColor="#616161"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/_0"
                android:textColor="#b4b6aa"
                android:textSize="56sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <EditText
                android:id="@+id/teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:hint="@string/team_b"
                android:imeOptions="actionSend"
                android:inputType="textCapSentences|textAutoCorrect"
                android:padding="4dp"
                android:textColor="#616161"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="56sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/plus" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/minus" />

            <TextView
                style="@style/GameStats"
                android:text="0" />


            <TextView
                style="@style/GameStats"
                android:text="Goals" />

            <TextView
                style="@style/GameStats"
                android:text="0" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/plus" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:layout_height="match_parent"
                android:text="@string/minus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/plus" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/minus" />

            <TextView
                style="@style/GameStats"
                android:text="0" />


            <TextView
                style="@style/GameStats"
                android:text="Penalties" />

            <TextView
                style="@style/GameStats"
                android:text="0" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/plus" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:layout_height="match_parent"
                android:text="@string/minus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/plus" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/minus" />

            <TextView
                style="@style/GameStats"
                android:text="0" />


            <TextView
                style="@style/GameStats"
                android:text="Faults" />

            <TextView
                style="@style/GameStats"
                android:text="0" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/plus" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:layout_height="match_parent"
                android:text="@string/minus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/plus" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/minus" />

            <TextView
                style="@style/GameStats"
                android:text="0" />


            <TextView
                style="@style/GameStats"
                android:text="Shots" />

            <TextView
                style="@style/GameStats"
                android:text="0" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/plus" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:layout_height="match_parent"
                android:text="@string/minus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/plus" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/minus" />

            <TextView
                style="@style/GameStats"
                android:text="0" />


            <TextView
                style="@style/GameStats"
                android:text="Saves" />

            <TextView
                style="@style/GameStats"
                android:text="0" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:text="@string/plus" />

            <Button
                style="@style/PlusMinusButtonStyle"
                android:layout_height="match_parent"
                android:text="@string/minus" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="resetScoreAB"
            android:text="Reset" />

    </LinearLayout>

</LinearLayout>

